Home page spacing and font sie fixed

--- a/style.css
+++ b/style.css
@@ -142,7 +142,6 @@ p {
   width: 130px;
   height: 130px;
   border-radius: 50%;
-
   color: var(--primary-color-text);
   text-decoration: none;
   font-weight: bold;
@@ -167,19 +166,21 @@ p {
   background-color: var(--background-color);
 }
 
-
-.project-details-container, .project-container {
+.project-details-container,
+.project-container {
   max-width: 900px;
   margin: 40px auto;
 }
 
-.project-details-container h2, .project-container h2 {
+.project-details-container h2,
+.project-container h2 {
   text-align: center;
   font-size: 3rem;
   margin-bottom: 2rem;
 }
 
-.project-details-container h3, .project-container h3 {
+.project-details-container h3,
+.project-container h3 {
   font-size: 1rem;
   padding-bottom: 1.2rem;
   opacity: 0.9;
@@ -238,7 +239,6 @@ p {
   );
 }
 
-
 /* .project-image {
   width: 100%;
   display: block;
@@ -247,7 +247,7 @@ p {
 } */
 
 .project-image {
-   display: block;
+  display: block;
   margin: 2rem auto;
   width: 100%;
   max-width: 800px;
@@ -629,7 +629,7 @@ footer {
   }
 
   nav ul {
-    font-size: 12px;
+    font-size: 0.8rem;
     gap: 0.5rem;
   }
 
@@ -666,12 +666,13 @@ footer {
     gap: 1rem;
     justify-content: center;
     align-items: center;
-    margin: 1rem 0;
+    margin-top: 1rem;
   }
+
   .btn-link {
-    width: 70px;
-    height: 70px;
-    font-size: 0.7rem;
+    width: 100px;
+    height: 100px;
+    font-size: 1rem;
   }
 
   .contact-container {
@@ -738,56 +739,49 @@ footer {
     font-size: 14px;
   }
 
-  .project-container, .project-details-container {
+  .project-container,
+  .project-details-container {
     max-width: 400px;
-  margin: 20px auto;
+    margin: 20px auto;
+  }
 
-}
+  .project-container h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
 
- .project-container h2 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-}
-
-
-.project-container h3 {
-  font-size: 0.7rem;
-  padding-bottom: 0;
-}
-
+  .project-container h3 {
+    font-size: 0.7rem;
+    padding-bottom: 0;
+  }
 
   .project-card {
-  width: 350px;
-  height: 300px;
-}
+    width: 350px;
+    height: 300px;
+  }
 
+  .project-details-container h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
 
-.project-details-container h2{
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
+  .project-details-container p {
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+    text-align: center;
+  }
 
-.project-details-container p{
-  font-size: 0.8rem;
-  margin-top: 0.5rem;
-  text-align: center;
-}
+  .project-image {
+    height: 200px;
+    margin: 1rem auto;
+  }
 
-
-.project-image {
-
-  height: 200px;
-  margin: 1rem auto;
-}
-
-.previous-project {
-  font-size: 1rem;
-}
-.next-project {
-
-  font-size: 1rem;
-
-}
+  .previous-project {
+    font-size: 1rem;
+  }
+  .next-project {
+    font-size: 1rem;
+  }
   footer {
     padding: 0.8rem 1rem;
     margin-top: 1.8rem;
